[package]
name = "slabmap"
version = "0.1.1"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/frozenlib/slabmap"
documentation = "https://docs.rs/slabmap/"
keywords = ["slab", "allocator", "map", "vec"]
categories = ["data-structures", "memory-management"]
description = "HashMap-like collection that automatically determines the key."
edition = "2018"

[dependencies]

[dev-dependencies]
proptest = "1.0.0"
test-strategy = "0.2.0"
criterion = "0.3.5"
slab = "0.4.6"
rand = "0.8.5"
atty = "0.2.14"         # Because criterion depends on a version of atty that cannot be compiled.


[lib]
bench = false

[[bench]]
name = "regression"
harness = false

[[bench]]
name = "compare"
harness = false
