[package]
name = "slabmap"
version = "0.1.1"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/frozenlib/slabmap"
documentation = "https://docs.rs/slabmap/"
keywords = ["slab", "allocator", "map", "vec"]
categories = ["data-structures", "memory-management"]
description = "HashMap-like collection that automatically determines the key."
edition = "2021"

[dependencies]

[dev-dependencies]
proptest = "1.0.0"
test-strategy = "0.2.1"
criterion = "0.4.0"
slab = "0.4.7"
rand = "0.8.5"
atty = "0.2.14"         # Because criterion depends on a version of atty that cannot be compiled.
serde = "1.0.151"       # Because criterion depends on a version of serde that cannot be compiled.
regex = "1.7.0"         # Because criterion depends on a version of regex that cannot be compiled.


[lib]
bench = false

[[bench]]
name = "regression"
harness = false

[[bench]]
name = "compare"
harness = false
