[package]
name = "slabmap"
version = "0.2.0"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/frozenlib/slabmap"
documentation = "https://docs.rs/slabmap/"
keywords = ["slab", "allocator", "map", "vec"]
categories = ["data-structures", "memory-management"]
description = "HashMap-like collection that automatically determines the key."
edition = "2021"

[dependencies]
derive-ex = "0.1.7"

[dev-dependencies]
proptest = "1.2.0"
test-strategy = "0.3.1"
criterion = "0.5.1"
slab = "0.4.8"
rand = "0.8.5"

[lib]
bench = false

[[bench]]
name = "regression"
harness = false

[[bench]]
name = "compare"
harness = false
